chore: add routes

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="UTF-8" />
@@ -12,7 +12,7 @@
   <title>React 18, TypeScript, Jest, Testing Library, TailwindCSS 3, Vite, Eslint and Prettier boilerplate</title>
 </head>
 
-<body>
+<body class="bg-background-background">
   <div id="root"></div>
   <script type="module" src="/src/index.tsx"></script>
 </body>
